added card header code

--- a/index.html
+++ b/index.html
@@ -10,7 +10,19 @@
         
     </header>
     <main>
-        
+        <!-- card container section started -->
+        <div class="cardContainer">
+            <!-- Card header started -->
+            <div class="cardHeader">
+                <img src="resources/images/hero-image-business-card.png" alt="Hero image for card : a business woman and man cheering up by clashing two coffee cup">
+            </div>
+            <div class="cardBody">
+
+            </div>
+            <div class="cardFooter">
+
+            </div>
+        </div>
     </main>
     <footer>
 
