added card body and footer code

--- a/index.html
+++ b/index.html
@@ -16,11 +16,23 @@
             <div class="cardHeader">
                 <img src="resources/images/hero-image-business-card.png" alt="Hero image for card : a business woman and man cheering up by clashing two coffee cup">
             </div>
+            <!-- Card body started -->
             <div class="cardBody">
+                <h2>Perfect solution for small business</h2>
+                <p>Small businesses need to generate leads to grow. You can use tools like Ringy.</p>
+            </div>
+            <div class="horizontalLine">
 
             </div>
+            <!-- Footer class started for card -->
             <div class="cardFooter">
-
+                <div class="profilePictureAvatar">
+                    <img src="resources/images/avatar-image-business-card.png" alt="Avatar of a business man profile picture: smiling">
+                </div>
+                <div class="namAndDesignation">
+                    <h2>Amy Burgess</h2>
+                    <p>Customer Manger, Solution Oy</p>
+                </div>
             </div>
         </div>
     </main>
