card header css completed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="cardContainer">
             <!-- Card header started -->
             <div class="cardHeader">
-                <img src="resources/images/hero-image-business-card.png" alt="Hero image for card : a business woman and man cheering up by clashing two coffee cup">
+                <div class="images"></div>
             </div>
             <!-- Card body started -->
             <div class="cardBody">
